Update README with docs link

--- a/README.adoc
+++ b/README.adoc
@@ -1,1 +1,5 @@
-# transform
+# Trasnform Processor
+
+To learn more about this application and the supported properties, please review the following link.
+
+include::spring-cloud-starter-stream-processor-transform/README.adoc[]
